tests/compile-fail/mut_self_for_rc.stderr
error: the trait `Foo` cannot be auto-implemented for Rc, because this method has a `&mut self` receiver
 --> tests/compile-fail/mut_self_for_rc.rs:6:5
  |
6 |     fn foo(&mut self);
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: only `&self` and no receiver are allowed
